--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </div>
 </div>
 
-<script src="js/prototype/sliderPrototype.js"></script>
-<script src="js/prototype/mainPrototype.js"></script>
+<script src="js/class/sliderClass.js"></script>
+<script src="js/class/mainClass.js"></script>
 </body>
 </html>
